// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom link get transaction fetches with all filter 1`] = `
Object {
  "body": Object {
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "processor.event": "transaction",
            },
          },
          Object {
            "terms": Object {
              "service.name": Array [
                "foo",
              ],
            },
          },
          Object {
            "terms": Object {
              "service.environment": Array [
                "bar",
              ],
            },
          },
          Object {
            "terms": Object {
              "transaction.name": Array [
                "baz",
              ],
            },
          },
          Object {
            "terms": Object {
              "transaction.type": Array [
                "qux",
              ],
            },
          },
        ],
      },
    },
  },
  "index": "myIndex",
  "size": 1,
  "terminateAfter": 1,
}
`;

exports[`custom link get transaction fetches without filter 1`] = `
Object {
  "body": Object {
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "processor.event": "transaction",
            },
          },
        ],
      },
    },
  },
  "index": "myIndex",
  "size": 1,
  "terminateAfter": 1,
}
`;
